--- a/packages/sage-assets/lib/stylesheets/components/_banner.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_banner.scss
@@ -17,7 +17,7 @@ $-banner-colors: (
   secondary: (
     background: var(--pine-color-grey-200),
     text: var(--pine-color-grey-950),
-    text-hover: var(--pine-color-grey-800),
+    text-hover: var(--pine-color-text-secondary),
     icon: "info-circle-filled",
     icon-color: var(--pine-color-grey-700),
   ),
