--- a/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
+++ b/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
@@ -250,7 +250,7 @@
 ///
 /// @param {color} $focus-within-background-color Hex color to be used for the background-color
 ///
-@mixin sage-focus-outline--focus-within($focus-within-background-color: sage-color(primary, 100)) {
+@mixin sage-focus-outline--focus-within($focus-within-background-color: var(--pine-color-blue-150)) {
   &:focus-within:not(:disabled):not([aria-disabled="true"]) {
     background-color: $focus-within-background-color;
   }
@@ -299,7 +299,7 @@
 /// @param {number} $offset [4.5] unitless number for the initial offset for the starting point of the dash; typically matches a dash size
 /// @param {number} $border-radius [4] unitless number for the border radius of the shape
 ///
-@mixin sage-dashed-border($thickness: 1, $color: sage-color(grey, 500), $dash: 4.5, $gap: 4.5, $offset: 4.5, $border-radius: 4) {
+@mixin sage-dashed-border($thickness: 1, $color: var(--pine-color-grey-500), $dash: 4.5, $gap: 4.5, $offset: 4.5, $border-radius: 4) {
   $stripped-color-value: str-replace("#{$color}", "#", "%23");
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='#{$border-radius}' ry='#{$border-radius}' stroke='#{$stripped-color-value}' stroke-width='#{$thickness * 2}' stroke-dasharray='#{$dash}%2c#{$gap + $thickness * 4}' stroke-dashoffset='#{$offset}' stroke-linecap='square'/%3e%3c/svg%3e");
 }
@@ -410,7 +410,7 @@
   width: 100%;
   padding: var(--pine-dimension-sm);
   font: var(--pine-typography-body);
-  color: var(--pine-color-text-active);
+  color: var(--pine-color-text-strong);
   appearance: none;
   border: var(--pine-border);
   border-radius: sage-border(radius-medium);
@@ -419,11 +419,11 @@
   transition-property: border, box-shadow, color;
 
   @include placeholder {
-    color: var(--pine-color-text-placeholder);
+    color: var(--pine-color-text-tertiary);
   }
 
   &:hover:not(:disabled) {
-    color: var(--pine-color-text-active);
+    color: var(--pine-color-text-strong);
     border-color: var(--pine-color-border-hover);
 
     .sage-form-field--error & {
@@ -452,7 +452,7 @@
     resize: none;
 
     @include placeholder {
-      color: var(--pine-color-text-placeholder);
+      color: var(--pine-color-text-tertiary);
     }
 
     .sage-form-field--showplaceholder & ~ label {
@@ -461,7 +461,7 @@
   }
 
   &[readonly] {
-    color: var(--pine-color-text-readonly);
+    color: var(--pine-color-text-muted);
     background-color: var(--pine-color-background-container-disabled);
     cursor: not-allowed;
     resize: none;
@@ -483,6 +483,10 @@
 
     background-color: var(--pine-color-red-050);
     border-color: var(--pine-color-border-danger);
+
+    [data-theme="dark"] & {
+      background-color: var(--pine-color-red-950);
+    }
 
     ~ label {
       color: var(--pine-color-text);
@@ -558,7 +562,7 @@
   margin-block-start: var(--pine-dimension-xs);
 
   .sage-form-field--error & {
-    color: var(--pine-color-text-danger);
+    color: var(--pine-color-text-message-danger);
 
     &::before {
       @include sage-icon-base(danger, md, pine);
@@ -662,7 +666,7 @@
 ///
 @mixin sage-panel() {
   padding: sage-spacing(panel);
-  background-color: sage-color(white);
+  background-color: var(--pine-color-background-container);
   border-radius: sage-border(radius-large);
   box-shadow: sage-shadow(100);
 }
