--- a/docs/lib/sage-frontend/stylesheets/docs/_specs.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_specs.scss
@@ -7,15 +7,15 @@
 .sage-specs {
   th {
     padding: 4px;
-    color: sage-color(grey, 700);
-    border-block-end: 1px solid sage-color(grey, 300);
+    color: var(--pine-color-text-muted);
+    border-block-end: 1px solid var(--pine-color-border-hover);
   }
 
   td {
     padding: 4px;
     font-size: sage-font-size(body-xs);
     vertical-align: middle;
-    border-block-end: 1px solid sage-color(grey, 200);
+    border-block-end: 1px solid var(--pine-color-border-disabled);
   }
 
   tfoot td {
