--- a/packages/sage-assets/lib/stylesheets/components/_carousel.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_carousel.scss
@@ -5,8 +5,8 @@
 ////
 
 $-sage-carousel-arrow-width: sage-spacing(lg);
-$-sage-carousel-active-color: sage-color(grey, 600);
-$-sage-carousel-inactive-color: sage-color(grey, 500);
+$-sage-carousel-active-color: var(--pine-color-text-tertiary);
+$-sage-carousel-inactive-color: var(--pine-color-text-disabled);
 
 .sage-carousel {
   display: block;
