--- a/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
@@ -17,9 +17,9 @@ $-dropdown-panel-max-height: rem(400px);
 $-dropdown-panel-max-height-small: rem(185px);
 $-dropdown-panel-max-height-breakpoint: 775px;
 
-$-dropdown-trigger-label-color-label-background: map-get($sage-field-colors, label-background);
-$-dropdown-trigger-label-color-default: map-get($sage-field-colors, default);
-$-dropdown-trigger-label-color-disabled: map-get($sage-field-colors, disabled);
+$-dropdown-trigger-label-color-label-background: sage-field-color(label-background);
+$-dropdown-trigger-label-color-default: sage-field-color(default);
+$-dropdown-trigger-label-color-disabled: sage-field-color(disabled);
 $-dropdown-trigger-padding-label: map-get($sage-field-configs, padding-label);
 $-dropdown-trigger-padding-x: map-get($sage-field-configs, padding);
 $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
@@ -45,7 +45,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
 
     &:hover {
       z-index: sage-z-index(default, 1);
-      background-color: sage-color(white);
+      background-color: var(--pine-color-background-container);
     }
 
     &:focus-visible,
@@ -131,31 +131,31 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
   &:focus-within {
     outline: none;
 
-    @include sage-focus-outline--update-color(sage-color(purple, 300));
+    @include sage-focus-outline--update-color(var(--pine-color-purple-600));
   }
 }
 
 .sage-dropdown__item--border-before {
   padding-block-start: sage-spacing(xs);
   margin-block-start: sage-spacing(xs);
-  border-block-start: 1px solid sage-color(grey, 200);
+  border-block-start: 1px solid var(--pine-color-border-disabled);
 }
 
 .sage-dropdown__item--border-after {
   padding-block-end: sage-spacing(xs);
   margin-block-end: sage-spacing(xs);
-  border-block-end: 1px solid sage-color(grey, 200);
+  border-block-end: 1px solid var(--pine-color-border-disabled);
 }
 
 .sage-dropdown__item--disabled {
   &:active {
-    @include sage-focus-outline--update-color(sage-color(purple, 300));
+    @include sage-focus-outline--update-color(var(--pine-color-purple-600));
   }
 }
 
 .sage-dropdown__item--heading {
   padding: sage-spacing(sm) sage-spacing(sm) 0 sage-spacing(sm);
-  color: sage-color(grey, 600);
+  color: var(--pine-color-text-tertiary);
   text-transform: uppercase;
   cursor: default;
   pointer-events: none;
@@ -166,7 +166,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
 .sage-dropdown__item-control {
   @include sage-button-style-reset();
   @include sage-focus-outline($outline-offset-inline: 4px, $outline-offset-block: -2px);
-  @include sage-focus-outline--update-color(sage-color(purple, 300));
+  @include sage-focus-outline--update-color(var(--pine-color-purple-600));
 
   @extend %t-sage-body-med;
 
@@ -192,12 +192,12 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
 
 
   &:hover {
-    background-color: sage-color(grey, 150);
+    background-color: var(--pine-color-background-muted);
   }
 
   &:focus-within {
     @include sage-focus-outline($outline-offset-inline: 4px, $outline-offset-block: -2px);
-    @include sage-focus-outline--update-color(sage-color(purple, 300));
+    @include sage-focus-outline--update-color(var(--pine-color-purple-600));
 
     &::after {
       opacity: 1;
@@ -222,7 +222,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
 
   .sage-dropdown__item--disabled &,
   &:disabled {
-    color: sage-color(grey, 500);
+    color: var(--pine-color-text-disabled);
     pointer-events: none;
     cursor: not-allowed;
   }
@@ -235,29 +235,29 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
 }
 
 .sage-dropdown__item-control--primary {
-  color: sage-color(primary, 300);
+  color: var(--pine-color-primary);
 
   &:hover {
-    color: sage-color(primary, 300);
-    background-color: sage-color(primary, 100);
+    color: var(--pine-color-primary);
+    background-color: var(--pine-color-blue-150);
   }
 }
 
 .sage-dropdown__item-control--danger {
-  color: sage-color(red, 500);
+  color: var(--pine-color-danger);
 
   &:hover {
-    color: sage-color(red, 500);
-    background-color: sage-color(red, 150);
+    color: var(--pine-color-danger);
+    background-color: var(--pine-color-red-150);
   }
 }
 
 .sage-dropdown__item-control--muted {
-  color: sage-color(grey, 600);
+  color: var(--pine-color-text-tertiary);
 
   &:hover {
-    color: sage-color(grey, 900);
-    background-color: sage-color(grey, 200);
+    color: var(--pine-color-text);
+    background-color: var(--pine-color-border-disabled);
   }
 }
 
@@ -312,6 +312,11 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
   background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
   background-attachment: local, local, scroll, scroll;
 
+  [data-theme="dark"] & {
+    background: var(--pine-color-background-container);
+    border: var(--pine-border);
+  }
+
   :not(.sage-dropdown--anchor-right) > .sage-dropdown__panel & {
     inset-inline-start: 0;
   }
@@ -326,6 +331,16 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
 
   .sage-dropdown--page-size & {
     min-width: 100%;
+  }
+
+  .sage-search ~ & {
+    border-start-start-radius: 0;
+    border-start-end-radius: 0;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    background: var(--pine-color-background-container);
+    border: var(--pine-border);
   }
 
   @media (max-height: $-dropdown-panel-max-height-breakpoint) {
@@ -345,7 +360,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
   min-width: $-dropdown-width;
   width: auto;
   border-radius: sage-border(radius-medium);
-  background-color: sage-color(white);
+  background-color: var(--pine-color-background-container);
   box-shadow: sage-shadow(100);
   transition: map-get($sage-transitions, default);
   transition-property: transform, z-index;
@@ -434,7 +449,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
 .sage-btn--icon-right-caret-down::before {
   .sage-dropdown__trigger--select &,
   .sage-dropdown__trigger & {
-    color: sage-color(grey, 600);
+    color: var(--pine-color-text-tertiary);
   }
 }
 
