--- a/packages/sage-assets/lib/stylesheets/components/_pagination.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_pagination.scss
@@ -8,11 +8,11 @@
 $-pagination-size: rem(40px);
 $-pagination-padding-arrows: rem(10px) rem(12px);
 $-pagination-radius: sage-border(radius-round);
-$-pagination-text-color: sage-color(grey, 900);
-$-pagination-text-color-disabled: sage-color(grey, 600);
-$-pagination-bg-color-current: sage-color(grey, 150);
-$-pagination-bg-color-hover: sage-color(grey, 200);
-$-pagination-focus-ring-color: sage-color(purple, 300);
+$-pagination-text-color: var(--pine-color-text);
+$-pagination-text-color-disabled: var(--pine-color-grey-600);
+$-pagination-bg-color-current: var(--pine-color-background-muted);
+$-pagination-bg-color-hover: var(--pine-color-border-disabled);
+$-pagination-focus-ring-color: var(--pine-color-purple-600);
 
 
 .sage-pagination {
@@ -106,6 +106,9 @@ $-pagination-focus-ring-color: sage-color(purple, 300);
   [dir="rtl"] & {
     transform: rotate(180deg);
   }
+  [data-theme="dark"] & {
+    filter: invert(1);
+  }
 }
 
 .sage-pagination__item:last-of-type .sage-pagination__page::before {
@@ -116,6 +119,10 @@ $-pagination-focus-ring-color: sage-color(purple, 300);
 
   [dir="rtl"] & {
     transform: rotate(180deg);
+  }
+
+  [data-theme="dark"] & {
+    filter: invert(1);
   }
 }
 
