--- a/packages/sage-assets/lib/stylesheets/tokens/_shadow.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_shadow.scss
@@ -9,17 +9,17 @@
 /// Sage shadows token
 ///
 $sage-shadows: (
-  sm: (0 1px 2px rgba(sage-color(grey, 950), 0.06), 0 1px 3px rgba(sage-color(grey, 950), 0.1)),
-  md: (0 4px 6px -2px rgba(sage-color(grey, 950), 0.03), 0 12px 16px -4px rgba(sage-color(grey, 950), 0.08)),
-  lg: (0 24px 48px -12px rgba(sage-color(grey, 950), 0.18)),
-  modal: (0 32px 64px -12px rgba(sage-color(grey, 950), 0.24)),
-  050: (0 1px 2px 0 rgba(sage-color(grey, 950), 0.05)),
-  100: (0 1px 3px 0 rgba(sage-color(grey, 950), 0.1), 0 1px 2px 0 rgba(sage-color(grey, 950), 0.06)),
-  150: (0 4px 8px -2px rgba(sage-color(grey, 950), 0.1), 0 2px 4px -2px rgba(sage-color(grey, 950), 0.06)),
-  200: (0 12px 16px -4px rgba(sage-color(grey, 950), 0.08), 0 4px 6px -2px rgba(sage-color(grey, 950), 0.03)),
-  300: (0 20px 24px -4px rgba(sage-color(grey, 950), 0.08), 0 8px 8px -4px rgba(sage-color(grey, 950), 0.03)),
-  400: (0 24px 48px -12px rgba(sage-color(grey, 950), 0.18)),
-  500: (0 32px 64px -12px rgba(sage-color(grey, 950), 0.14)),
+  sm: var(--pine-box-shadow-100),
+  md: var(--pine-box-shadow-200),
+  lg: var(--pine-box-shadow-400),
+  modal: var(--pine-box-shadow-500),
+  050: var(--pine-box-shadow-050),
+  100: var(--pine-box-shadow-100),
+  150: var(--pine-box-shadow-150),
+  200: var(--pine-box-shadow-200),
+  300: var(--pine-box-shadow-300),
+  400: var(--pine-box-shadow-400),
+  500: var(--pine-box-shadow-500),
 );
 
 ///
